--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "server": "nodemon server/server.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
+    "mint-ui": "^2.2.13",
     "mongoose": "^5.0.13",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
@@ -39,6 +41,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "http-proxy-middleware": "^0.18.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -67,6 +70,5 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ],
-  "proxy": "http://127.0.0.1:9000"
+  ]
 }
