--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^5.0.13",
     "utility": "^1.13.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
