--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
+    "browser-cookies": "^1.2.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "mint-ui": "^2.2.13",
